[package]
name = "loggernow_cpu"
version = "0.1.0"
authors = ["Raj Patil <floatraj@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 0
lto = true
# debug = true
# lto = false
opt-level = 3
codegen-units = 1

[dependencies]
heim = { version = "0.1.0-rc.1", features = [ "cpu","host"] }
loggernow_common = { path = "../loggernow_common" }
