[package]
name = "loggernow_master_lib"
version = "0.1.0"
authors = ["Raj Patil <floatraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loggernow_cpu = { path = "../loggernow_cpu" }
loggernow_disk = { path = "../loggernow_disk" }
loggernow_memory = { path = "../loggernow_memory" }
loggernow_processes = { path = "../loggernow_processes" }
loggernow_common = { path = "../loggernow_common" }
language_runner = { path = "../language_runner" }



futures = "0.3.13"
