[package]
name = "loggernow_memory"
version = "0.1.0"
authors = ["Raj Patil <floatraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = { version = "0.1.0-rc.1", features = [ "memory"] }
loggernow_common = { path = "../loggernow_common" }