[package]
name = "monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
config = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"


eyre = "0.6.5"
color-eyre = "0.5.11"
serde_derive = "*"

env_logger = "0.9.0"
tracing-appender = "0.2.0"
log = "0.4"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.1", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.0"
tracing-log = "0.1.1"
